--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-native-maps": "0.26.1"
+    "react-native-maps": "0.26.1",
+    "expo-location": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
