--- a/client/package.json
+++ b/client/package.json
@@ -10,21 +10,22 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.0.7",
+    "@react-navigation/compat": "^5.1.0",
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.8",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-location": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7",
-    "react-native-maps": "0.26.1",
-    "expo-location": "~8.0.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
